@@ -1,5 +1,1 @@
-import qxml
-import qxmledit
-
 __all__ = ['qxml', 'qxmledit']
-
