@@ -1,6 +1,39 @@
-#!/usr/bin/env python
+#!/usr/bin/env python2
 
-# All the code needed for XML edits
+# The MIT License (MIT)
+#
+# Copyright (c) 2015 PMA2020
+#
+# Permission is hereby granted, free of charge, to any person obtaining a copy
+# of this software and associated documentation files (the "Software"), to deal
+# in the Software without restriction, including without limitation the rights
+# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+# copies of the Software, and to permit persons to whom the Software is
+# furnished to do so, subject to the following conditions:
+#
+# The above copyright notice and this permission notice shall be included in all
+# copies or substantial portions of the Software.
+#
+# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+# SOFTWARE.
+
+"""Edit XML files to conform to PMA2020 standards, linking when necessary.
+
+Dr. Luke H. MacDonald's instructions for manual XML editing were translated to
+python. This facilitated faster development with minimal errors; the only true
+errors were undiscovered bugs in this code.
+
+Originally, this module was built as to stand alone. However, in practice, it
+is never run without ``qxml``. Thus, for historical reasons, there is a
+command line interface.
+
+Last modified: 11 November 2015
+"""
 
 import re
 import os.path
